load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_jvm//:jvm.bzl", "kt_javac_options")
load("//build:compiler-options.bzl", "create_kotlinc_options")

kt_javac_options(
  name = "default-javac-opts",
  no_proc = True,
)

create_kotlinc_options(name= "k7", jvm_target = "7")
create_kotlinc_options(name= "k8", jvm_target = "8")
create_kotlinc_options(name= "k11", jvm_target = "11")
create_kotlinc_options(name = "k17", jvm_target = "17")
create_kotlinc_options(name = "k21", jvm_target = "21")

java_binary(
  name = "main_run",
  runtime_deps = [":main"],
  main_class = "com.intellij.idea.Main",
  jvm_flags = [
    "--add-opens=java.base/java.io=ALL-UNNAMED",
    "--add-opens=java.base/java.lang=ALL-UNNAMED",
    "--add-opens=java.base/java.lang.ref=ALL-UNNAMED",
    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
    "--add-opens=java.base/java.net=ALL-UNNAMED",
    "--add-opens=java.base/java.nio=ALL-UNNAMED",
    "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
    "--add-opens=java.base/java.text=ALL-UNNAMED",
    "--add-opens=java.base/java.time=ALL-UNNAMED",
    "--add-opens=java.base/java.util=ALL-UNNAMED",
    "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
    "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
    "--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED",
    "--add-opens=java.base/jdk.internal.vm=ALL-UNNAMED",
    "--add-opens=java.base/sun.net.dns=ALL-UNNAMED",
    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
    "--add-opens=java.base/sun.nio.fs=ALL-UNNAMED",
    "--add-opens=java.base/sun.security.ssl=ALL-UNNAMED",
    "--add-opens=java.base/sun.security.util=ALL-UNNAMED",
    "--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED",
    "--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED",
    "--add-opens=java.desktop/com.apple.laf=ALL-UNNAMED",
    "--add-opens=java.desktop/com.sun.java.swing=ALL-UNNAMED",
    "--add-opens=java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED",
    "--add-opens=java.desktop/java.awt=ALL-UNNAMED",
    "--add-opens=java.desktop/java.awt.dnd.peer=ALL-UNNAMED",
    "--add-opens=java.desktop/java.awt.event=ALL-UNNAMED",
    "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
    "--add-opens=java.desktop/java.awt.image=ALL-UNNAMED",
    "--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED",
    "--add-opens=java.desktop/javax.swing=ALL-UNNAMED",
    "--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED",
    "--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED",
    "--add-opens=java.desktop/javax.swing.text.html=ALL-UNNAMED",
    "--add-opens=java.desktop/javax.swing.text.html.parser=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.awt=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.awt.datatransfer=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.awt.image=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.font=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.java2d=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.swing=ALL-UNNAMED",
    "--add-opens=java.management/sun.management=ALL-UNNAMED",
    "--add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED",
    "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
    "--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED",
    "--add-opens=jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED",
    "-Didea.home.path=$${BUILD_WORKSPACE_DIRECTORY}",
    # same as .idea/runConfigurations/IDEA.xml:
    "-Xmx2g",
    "-XX:MaxJavaStackTraceDepth=10000",
    "-XX:+AllowEnhancedClassRedefinition",
    "-XX:PrintIdealGraphLevl=3",
    "-XX:+IgnoreUnrecognizedVMOptions",
    "-ea",
    "-Dsun.io.useCanonCaches=false",
    "-Dsun.awt.disablegrab=true",
    "-Dsun.java2d.metal=true",
    "-Dapple.laf.useScreenMenuBar=true",
    "-Djdk.attach.allowAttachSelf",
    "-Djdk.module.illegalAccess.silent=true",
    "-DjbScreenMenuBar.enabled=true",
    "-Didea.jre.check=true",
    "-Didea.is.internal=true",
    "-Didea.debug.mode=true",
    "-Didea.config.path=$${BUILD_WORKSPACE_DIRECTORY}/config/idea",
    "-Didea.system.path=$${BUILD_WORKSPACE_DIRECTORY}/system/idea",
    "-Didea.diagnostic.opentelemetry.file=opentelemetry.json",
    "-Dfus.internal.test.mode=true",
    "-Dcompose.swing.render.on.graphics=true",
  ]
)

## used to determine community root path in the test
## see community/build/tests-options.bzl
exports_files(["intellij.idea.community.main.iml"])

### auto-generated section `build intellij.idea.community.main` start
load("@rules_jvm//:jvm.bzl", "jvm_library")

jvm_library(
  name = "main",
  visibility = ["//visibility:public"],
  srcs = glob([], allow_empty = True),
  runtime_deps = [
    "//platform/main/intellij.platform.monolith.main:monolith-main",
    "//plugins/coverage",
    "//plugins/ant",
    "//platform/boot",
    "//platform/bootstrap",
    "//java/compiler/impl",
    "//java/compiler/openapi:java-compiler",
    "//java/debugger/impl",
    "//java/debugger/openapi:java-debugger",
    "//platform/diff-api:diff",
    "//platform/diff-impl",
    "//xml/dom-impl",
    "//xml/dom-openapi:dom",
    "//java/execution/impl",
    "//java/execution/openapi:java-execution",
    "//platform/extensions",
    "//platform/forms_rt:java-guiForms-rt",
    "//platform/icons",
    "//java/idea-ui:ui",
    "//java/java-impl:impl",
    "//java/java-runtime:rt",
    "//java/jsp-openapi:jsp",
    "//java/jsp-spi",
    "//platform/lang-api:lang",
    "//platform/lang-impl",
    "//platform/lvcs-api:lvcs",
    "//platform/lvcs-impl",
    "//java/compiler/instrumentation-util",
    "//java/openapi:java",
    "//platform/platform-api:ide",
    "//platform/platform-impl:ide-impl",
    "//platform/starter",
    "//plugins/properties:properties-backend",
    "//java/ide-resources",
    "//java/ide-customization",
    "//java/ide-customization/training",
    "//spellchecker",
    "//java/jsp-base-openapi:jsp-base",
    "//java/testFramework",
    "//platform/testRunner",
    "//platform/usageView",
    "//platform/util",
    "//platform/vcs-api:vcs",
    "//platform/vcs-impl",
    "//platform/vcs-impl/exec",
    "//platform/vcs-impl/lang",
    "//platform/vcs-impl/lang/actions",
    "//platform/xdebugger-api:debugger",
    "//platform/xdebugger-impl:debugger-impl",
    "//xml/impl",
    "//plugins/ide-startup/importSettings",
    "//community-resources:customization",
    "//java/plugin",
    "//plugins/copyright",
    "//platform/testFramework",
    "//plugins/ui-designer:java-guiForms-designer",
    "//plugins/dev:dev-plugin-main",
    "//plugins/devkit:devkit-plugin-main",
    "//plugins/eclipse",
    "//plugins/git4idea:vcs-git",
    "//plugins/git4idea/shared",
    "//plugins/git4idea/frontend",
    "//plugins/git-features-trainer:vcs-git-featuresTrainer",
    "//images",
    "//plugins/groovy",
    "//plugins/junit",
    "//plugins/maven",
    "//RegExpSupport:regexp",
    "//plugins/svn4idea:vcs-svn",
    "//plugins/testng",
    "//java/langInjection",
    "//xml/langInjection",
    "//plugins/xpath",
    "//plugins/xslt-debugger",
    "//plugins/xslt-debugger/engine:xslt-debugger-rt",
    "//plugins/java-i18n",
    "//plugins/tasks/tasks-api:tasks",
    "//plugins/tasks/tasks-java:java",
    "//plugins/github/github-core:vcs-github",
    "//plugins/hg4idea:vcs-hg",
    "//xml/relaxng",
    "//plugins/gradle/java",
    "//platform/remote-servers/impl",
    "//plugins/javaFX/community",
    "//plugins/javaFX/jps",
    "//java/manifest",
    "//plugins/yaml/backend",
    "//plugins/tasks/tasks-core:core",
    "//plugins/tasks/tasks-core/jira",
    "//plugins/java-decompiler/plugin:java-decompiler",
    "//platform/structuralsearch:structuralSearch",
    "//java/structuralsearch-java:structuralSearch",
    "//plugins/groovy/structuralsearch-groovy:structuralSearch",
    "//plugins/groovy/git",
    "//plugins/groovy/ant",
    "//plugins/groovy/byteCodeViewer",
    "//json/backend",
    "//java/typeMigration",
    "//plugins/terminal",
    "//plugins/terminal/frontend",
    "//plugins/terminal/backend",
    "//plugins/stats-collector",
    "//plugins/completion-ml-ranking-models",
    "//plugins/completion-ml-ranking",
    "//plugins/stream-debugger-core:debugger-streams-core",
    "//plugins/stream-debugger:java-debugger-streams",
    "//libraries/jgoodies/common",
    "//plugins/editorconfig:editorconfig-plugin-main",
    "//plugins/sh/plugin:plugin-main",
    "//plugins/terminal/sh",
    "//plugins/gradle-maven:gradle-java-maven",
    "//plugins/markdown/core:markdown",
    "//plugins/markdown/plugin:plugin-main",
    "//plugins/webp",
    "//plugins/emojipicker",
    "//plugins/gradle/gradle-dependency-updater:dependencyUpdater",
    "//platform/settings-sync-core:settingsSync-core",
    "//plugins/settings-sync/jba:settingsSync",
    "//java/java-features-trainer:featuresTrainer",
    "//plugins/ml-local-models/java",
    "//plugins/kotlin:kotlin-plugin-community-main",
    "//plugins/laf/macos",
    "//plugins/laf/win10",
    "//plugins/search-everywhere-ml",
    "//plugins/marketplace-ml",
    "//plugins/toml",
    "//platform/tracing-ide",
    "//notebooks/visualization",
    "//plugins/keymaps/eclipse-keymap:keymap-eclipse",
    "//plugins/keymaps/visual-studio-keymap:keymap-visualStudio",
    "//plugins/keymaps/netbeans5.6-keymap:keymap-netbeans",
    "//plugins/evaluation-plugin",
    "//plugins/evaluation-plugin/languages/java",
    "//platform/warmup",
    "//plugins/remote-control",
    "//platform/polySymbols",
    "//plugins/performanceTesting/core:performanceTesting",
    "//platform/smart-update",
    "//plugins/gradle/intellij.gradle.analysis:analysis",
    "//plugins/htmltools:html-tools",
    "//platform/new-ui-onboarding",
    "//platform/new-users-onboarding",
    "//plugins/kotlin/onboarding-promoter",
    "//platform/execution-process-elevation",
    "//plugins/gitlab/gitlab-yaml:vcs-gitlab-yaml",
    "//plugins/yaml",
    "//platform/compose",
    "//json",
    "//java/java-terminal:terminal-tests",
    "//java/java-terminal:terminal",
    "//jvm/jvm-analysis-impl:analysis-impl",
    "//plugins/ByteCodeViewer:java-byteCodeViewer",
    "//plugins/github/github-json:vcs-github-json",
    "//plugins/github/github-tracker:vcs-github-tracker",
    "//plugins/search-everywhere-ml/ranking/core",
    "//plugins/search-everywhere-ml/ranking/java",
    "//plugins/search-everywhere-ml/ranking/vcs",
    "//plugins/search-everywhere-ml/ranking/yaml",
    "//plugins/search-everywhere-ml/typos",
    "//plugins/grazie",
    "//plugins/compose:compose-ide-plugin",
    "//plugins/compose/intellij.compose.ide.plugin.k1:ide-plugin-k1",
    "//plugins/compose/intellij.compose.ide.plugin.k2:ide-plugin-k2",
    "//plugins/compose/intellij.compose.ide.plugin.shared:ide-plugin-shared",
    "//plugins/compose/intellij.compose.ide.plugin.resources:ide-plugin-resources",
    "//plugins/compose/intellij.compose.ide.plugin.gradleTooling:ide-plugin-gradleTooling-rt",
    "//plugins/git-modal-commit:vcs-git-commit-modal",
    "//plugins/maven/maven-event-listener:server-eventListener",
    "//plugins/maven/maven3-server-impl:server-m3-impl",
    "//plugins/maven/maven36-server-impl:server-m36-impl",
    "//plugins/maven/maven40-server-impl:server-m40",
    "//plugins/mcp-server:mcpserver",
    "//python/pluginCore:community-plugin",
  ]
)

jvm_library(
  name = "main_test_lib",
  module_name = "intellij.idea.community.main",
  visibility = ["//visibility:public"],
  srcs = glob([], allow_empty = True),
  runtime_deps = [
    ":main",
    "//platform/main/intellij.platform.monolith.main:monolith-main_test_lib",
    "//plugins/coverage:coverage_test_lib",
    "//plugins/ant:ant_test_lib",
    "//platform/boot:boot_test_lib",
    "//platform/bootstrap:bootstrap_test_lib",
    "//java/compiler/impl:impl_test_lib",
    "//java/compiler/openapi:java-compiler_test_lib",
    "//java/debugger/impl:impl_test_lib",
    "//java/debugger/openapi:java-debugger_test_lib",
    "//platform/diff-api:diff_test_lib",
    "//platform/diff-impl:diff-impl_test_lib",
    "//xml/dom-impl:dom-impl_test_lib",
    "//xml/dom-openapi:dom_test_lib",
    "//java/execution/impl:impl_test_lib",
    "//java/execution/openapi:java-execution_test_lib",
    "//platform/extensions:extensions_test_lib",
    "//platform/forms_rt:java-guiForms-rt_test_lib",
    "//platform/icons:icons_test_lib",
    "//java/idea-ui:ui_test_lib",
    "//java/java-impl:impl_test_lib",
    "//java/java-runtime:rt_test_lib",
    "//java/jsp-openapi:jsp_test_lib",
    "//java/jsp-spi:jsp-spi_test_lib",
    "//platform/lang-api:lang_test_lib",
    "//platform/lang-impl:lang-impl_test_lib",
    "//platform/lvcs-api:lvcs_test_lib",
    "//platform/lvcs-impl:lvcs-impl_test_lib",
    "//java/compiler/instrumentation-util:instrumentation-util_test_lib",
    "//java/openapi:java_test_lib",
    "//platform/platform-api:ide_test_lib",
    "//platform/platform-impl:ide-impl_test_lib",
    "//platform/starter:starter_test_lib",
    "//plugins/properties:properties-backend_test_lib",
    "//java/ide-resources:ide-resources_test_lib",
    "//java/ide-customization:ide-customization_test_lib",
    "//java/ide-customization/training:training_test_lib",
    "//spellchecker:spellchecker_test_lib",
    "//java/jsp-base-openapi:jsp-base_test_lib",
    "//java/testFramework:testFramework_test_lib",
    "//platform/testRunner:testRunner_test_lib",
    "//platform/usageView:usageView_test_lib",
    "//platform/util:util_test_lib",
    "//platform/vcs-api:vcs_test_lib",
    "//platform/vcs-impl:vcs-impl_test_lib",
    "//platform/vcs-impl/exec:exec_test_lib",
    "//platform/vcs-impl/lang:lang_test_lib",
    "//platform/vcs-impl/lang/actions:actions_test_lib",
    "//platform/xdebugger-api:debugger_test_lib",
    "//platform/xdebugger-impl:debugger-impl_test_lib",
    "//xml/impl:impl_test_lib",
    "//plugins/ide-startup/importSettings:importSettings_test_lib",
    "//community-resources:customization_test_lib",
    "//java/plugin:plugin_test_lib",
    "//plugins/copyright:copyright_test_lib",
    "//platform/testFramework:testFramework_test_lib",
    "//plugins/ui-designer:java-guiForms-designer_test_lib",
    "//plugins/dev:dev-plugin-main_test_lib",
    "//plugins/devkit:devkit-plugin-main_test_lib",
    "//plugins/eclipse:eclipse_test_lib",
    "//plugins/git4idea:vcs-git_test_lib",
    "//plugins/git4idea/shared:shared_test_lib",
    "//plugins/git4idea/frontend:frontend_test_lib",
    "//plugins/git-features-trainer:vcs-git-featuresTrainer_test_lib",
    "//images:images_test_lib",
    "//plugins/groovy:groovy_test_lib",
    "//plugins/junit:junit_test_lib",
    "//plugins/maven:maven_test_lib",
    "//RegExpSupport:regexp_test_lib",
    "//plugins/svn4idea:vcs-svn_test_lib",
    "//plugins/testng:testng_test_lib",
    "//java/langInjection:langInjection_test_lib",
    "//xml/langInjection:langInjection_test_lib",
    "//plugins/xpath:xpath_test_lib",
    "//plugins/xslt-debugger:xslt-debugger_test_lib",
    "//plugins/xslt-debugger/engine:xslt-debugger-rt_test_lib",
    "//plugins/java-i18n:java-i18n_test_lib",
    "//plugins/tasks/tasks-api:tasks_test_lib",
    "//plugins/tasks/tasks-java:java_test_lib",
    "//plugins/github/github-core:vcs-github_test_lib",
    "//plugins/hg4idea:vcs-hg_test_lib",
    "//xml/relaxng:relaxng_test_lib",
    "//plugins/gradle/java:java_test_lib",
    "//platform/remote-servers/impl:impl_test_lib",
    "//plugins/javaFX/community:community_test_lib",
    "//plugins/javaFX/jps:jps_test_lib",
    "//java/manifest:manifest_test_lib",
    "//plugins/yaml/backend:backend_test_lib",
    "//plugins/tasks/tasks-core:core_test_lib",
    "//plugins/tasks/tasks-core/jira:jira_test_lib",
    "//plugins/java-decompiler/plugin:java-decompiler_test_lib",
    "//platform/structuralsearch:structuralSearch_test_lib",
    "//java/structuralsearch-java:structuralSearch_test_lib",
    "//plugins/groovy/structuralsearch-groovy:structuralSearch_test_lib",
    "//plugins/groovy/git:git_test_lib",
    "//plugins/groovy/ant:ant_test_lib",
    "//plugins/groovy/byteCodeViewer:byteCodeViewer_test_lib",
    "//json/backend:backend_test_lib",
    "//java/typeMigration:typeMigration_test_lib",
    "//plugins/terminal:terminal_test_lib",
    "//plugins/terminal/frontend:frontend_test_lib",
    "//plugins/terminal/backend:backend_test_lib",
    "//plugins/stats-collector:stats-collector_test_lib",
    "//plugins/completion-ml-ranking-models:completion-ml-ranking-models_test_lib",
    "//plugins/completion-ml-ranking:completion-ml-ranking_test_lib",
    "//plugins/stream-debugger-core:debugger-streams-core_test_lib",
    "//plugins/stream-debugger:java-debugger-streams_test_lib",
    "//libraries/jgoodies/common:common_test_lib",
    "//plugins/editorconfig:editorconfig-plugin-main_test_lib",
    "//plugins/sh/plugin:plugin-main_test_lib",
    "//plugins/terminal/sh:sh_test_lib",
    "//plugins/gradle-maven:gradle-java-maven_test_lib",
    "//plugins/markdown/core:markdown_test_lib",
    "//plugins/markdown/plugin:plugin-main_test_lib",
    "//plugins/webp:webp_test_lib",
    "//plugins/emojipicker:emojipicker_test_lib",
    "//plugins/gradle/gradle-dependency-updater:dependencyUpdater_test_lib",
    "//platform/settings-sync-core:settingsSync-core_test_lib",
    "//plugins/settings-sync/jba:settingsSync_test_lib",
    "//java/java-features-trainer:featuresTrainer_test_lib",
    "//plugins/ml-local-models/java:java_test_lib",
    "//plugins/kotlin:kotlin-plugin-community-main_test_lib",
    "//plugins/laf/macos:macos_test_lib",
    "//plugins/laf/win10:win10_test_lib",
    "//plugins/search-everywhere-ml:search-everywhere-ml_test_lib",
    "//plugins/marketplace-ml:marketplace-ml_test_lib",
    "//plugins/toml:toml_test_lib",
    "//platform/tracing-ide:tracing-ide_test_lib",
    "//notebooks/visualization:visualization_test_lib",
    "//plugins/keymaps/eclipse-keymap:keymap-eclipse_test_lib",
    "//plugins/keymaps/visual-studio-keymap:keymap-visualStudio_test_lib",
    "//plugins/keymaps/netbeans5.6-keymap:keymap-netbeans_test_lib",
    "//plugins/evaluation-plugin:evaluation-plugin_test_lib",
    "//plugins/evaluation-plugin/languages/java:java_test_lib",
    "//platform/warmup:warmup_test_lib",
    "//plugins/remote-control:remote-control_test_lib",
    "//platform/polySymbols:polySymbols_test_lib",
    "//plugins/performanceTesting/core:performanceTesting_test_lib",
    "//platform/smart-update:smart-update_test_lib",
    "//plugins/gradle/intellij.gradle.analysis:analysis_test_lib",
    "//plugins/htmltools:html-tools_test_lib",
    "//platform/new-ui-onboarding:new-ui-onboarding_test_lib",
    "//platform/new-users-onboarding:new-users-onboarding_test_lib",
    "//plugins/kotlin/onboarding-promoter:onboarding-promoter_test_lib",
    "//platform/execution-process-elevation:execution-process-elevation_test_lib",
    "//plugins/gitlab/gitlab-yaml:vcs-gitlab-yaml_test_lib",
    "//plugins/yaml:yaml_test_lib",
    "//platform/compose:compose_test_lib",
    "//json:json_test_lib",
    "//java/java-terminal:terminal-tests_test_lib",
    "//java/java-terminal:terminal_test_lib",
    "//jvm/jvm-analysis-impl:analysis-impl_test_lib",
    "//plugins/ByteCodeViewer:java-byteCodeViewer_test_lib",
    "//plugins/github/github-json:vcs-github-json_test_lib",
    "//plugins/github/github-tracker:vcs-github-tracker_test_lib",
    "//plugins/search-everywhere-ml/ranking/core:core_test_lib",
    "//plugins/search-everywhere-ml/ranking/java:java_test_lib",
    "//plugins/search-everywhere-ml/ranking/vcs:vcs_test_lib",
    "//plugins/search-everywhere-ml/ranking/yaml:yaml_test_lib",
    "//plugins/search-everywhere-ml/typos:typos_test_lib",
    "//plugins/grazie:grazie_test_lib",
    "//plugins/compose:compose-ide-plugin_test_lib",
    "//plugins/compose/intellij.compose.ide.plugin.k1:ide-plugin-k1_test_lib",
    "//plugins/compose/intellij.compose.ide.plugin.k2:ide-plugin-k2_test_lib",
    "//plugins/compose/intellij.compose.ide.plugin.shared:ide-plugin-shared_test_lib",
    "//plugins/compose/intellij.compose.ide.plugin.resources:ide-plugin-resources_test_lib",
    "//plugins/compose/intellij.compose.ide.plugin.gradleTooling:ide-plugin-gradleTooling-rt_test_lib",
    "//plugins/git-modal-commit:vcs-git-commit-modal_test_lib",
    "//plugins/maven/maven-event-listener:server-eventListener_test_lib",
    "//plugins/maven/maven3-server-impl:server-m3-impl_test_lib",
    "//plugins/maven/maven36-server-impl:server-m36-impl_test_lib",
    "//plugins/maven/maven40-server-impl:server-m40_test_lib",
    "//plugins/mcp-server:mcpserver_test_lib",
    "//python/python-process-output/common",
    "//python/python-process-output/common:common_test_lib",
    "//python/pluginCore:community-plugin_test_lib",
  ]
)
### auto-generated section `build intellij.idea.community.main` end

### auto-generated section `build intellij.idea.community.main.android` start
jvm_library(
  name = "main-android",
  visibility = ["//visibility:public"],
  srcs = glob([], allow_empty = True),
  runtime_deps = [
    "//android/android:core",
    "//:main",
    "//android/android-plugin:plugin",
    "//android/layoutlib",
    "//plugins/kotlin:kotlin-plugin-community-main",
    "//android/compose-designer",
    "//android/compose-ide-plugin",
    "//android/design-plugin",
    "//android/android-navigator:navigator",
  ]
)

jvm_library(
  name = "main-android_test_lib",
  module_name = "intellij.idea.community.main.android",
  visibility = ["//visibility:public"],
  srcs = glob([], allow_empty = True),
  runtime_deps = [
    ":main-android",
    "//android/android:core_test_lib",
    "//:main_test_lib",
    "//android/android-plugin:plugin_test_lib",
    "//android/layoutlib:layoutlib_test_lib",
    "//plugins/kotlin:kotlin-plugin-community-main_test_lib",
    "//android/compose-designer:compose-designer_test_lib",
    "//android/compose-ide-plugin:compose-ide-plugin_test_lib",
    "//android/design-plugin:design-plugin_test_lib",
    "//android/android-navigator:navigator_test_lib",
  ]
)
### auto-generated section `build intellij.idea.community.main.android` end

### auto-generated section `build intellij.idea.community.main.tests` start
jvm_library(
  name = "main-tests",
  visibility = ["//visibility:public"],
  srcs = glob([], allow_empty = True)
)

jvm_library(
  name = "main-tests_test_lib",
  module_name = "intellij.idea.community.main.tests",
  visibility = ["//visibility:public"],
  srcs = glob([], allow_empty = True),
  runtime_deps = [
    ":main-tests",
    "//:main",
    "//:main_test_lib",
    "//java/java-tests:tests",
    "//java/java-tests:tests_test_lib",
    "//java/idea-ui:ui-tests",
    "//java/idea-ui:ui-tests_test_lib",
    "//plugins/junit/java-tests",
    "//plugins/junit/java-tests:java-tests_test_lib",
    "//jvm/jvm-analysis-java-tests:analysis-java-tests",
    "//jvm/jvm-analysis-java-tests:analysis-java-tests_test_lib",
    "//plugins/svn4idea:vcs-svn-tests",
    "//plugins/svn4idea:vcs-svn-tests_test_lib",
    "//plugins/tasks/tasks-tests:tests",
    "//plugins/tasks/tasks-tests:tests_test_lib",
    "//xml/dom-tests",
    "//xml/dom-tests:dom-tests_test_lib",
    "//plugins/IntelliLang/tests",
    "//plugins/IntelliLang/tests:tests_test_lib",
    "//xml/tests",
    "//xml/tests:tests_test_lib",
    "//jps/model-serialization:model-serialization-tests",
    "//jps/model-serialization:model-serialization-tests_test_lib",
    "//plugins/ui-designer/jps-plugin:java-guiForms-jps",
    "//plugins/ui-designer/jps-plugin:java-guiForms-jps_test_lib",
    "//platform/structuralsearch:structuralSearch-tests",
    "//platform/structuralsearch:structuralSearch-tests_test_lib",
    "//json/backend/tests",
    "//json/backend/tests:tests_test_lib",
    "//platform/platform-tests:tests",
    "//platform/platform-tests:tests_test_lib",
    "//jps/model-impl:model-tests",
    "//jps/model-impl:model-tests_test_lib",
    "//platform/diff-impl/tests",
    "//platform/diff-impl/tests:tests_test_lib",
    "//platform/built-in-server:builtInServer-tests",
    "//platform/built-in-server:builtInServer-tests_test_lib",
    "//platform/script-debugger/debugger-ui:scriptDebugger-ui",
    "//platform/script-debugger/debugger-ui:scriptDebugger-ui_test_lib",
    "//platform/build-scripts/icons:images-build",
    "//platform/build-scripts/icons:images-build_test_lib",
    "//plugins/stats-collector:statsCollector-tests",
    "//plugins/stats-collector:statsCollector-tests_test_lib",
    "//plugins/completion-ml-ranking-models:completionMlRankingModels-tests",
    "//plugins/completion-ml-ranking-models:completionMlRankingModels-tests_test_lib",
    "//plugins/completion-ml-ranking:completionMlRanking-tests",
    "//plugins/completion-ml-ranking:completionMlRanking-tests_test_lib",
    "//plugins/testng_rt/tests",
    "//plugins/testng_rt/tests:tests_test_lib",
    "//platform/workspace/storage/tests",
    "//platform/workspace/storage/tests:tests_test_lib",
    "//platform/workspace/jps/tests",
    "//platform/workspace/jps/tests:tests_test_lib",
    "//plugins/textmate/plugin",
    "//plugins/textmate/plugin:plugin_test_lib",
    "//plugins/textmate/backend",
    "//plugins/textmate/backend:backend_test_lib",
    "//plugins/space/jps-plugin:java-jps",
    "//plugins/space/jps-plugin:java-jps_test_lib",
    "//build/tasks",
    "//build/tasks:tasks_test_lib",
    "//plugins/junit5_rt_tests:junit-v5-rt-tests",
    "//plugins/junit5_rt_tests:junit-v5-rt-tests_test_lib",
    "//plugins/properties/tests",
    "//plugins/properties/tests:tests_test_lib",
    "//platform/execution-impl:execution-tests",
    "//platform/execution-impl:execution-tests_test_lib",
    "//plugins/commander",
    "//plugins/commander:commander_test_lib",
    "//plugins/configuration-script",
    "//plugins/configuration-script:configuration-script_test_lib",
    "//plugins/configuration-script:configurationScript-test-java",
    "//plugins/configuration-script:configurationScript-test-java_test_lib",
    "//platform/statistics/envTests",
    "//platform/statistics/envTests:envTests_test_lib",
    "//plugins/toml/tests",
    "//plugins/toml/tests:tests_test_lib",
    "//plugins/maven/src/test:maven-tests",
    "//plugins/maven/src/test:maven-tests_test_lib",
    "//plugins/gradle/java:java-tests",
    "//plugins/gradle/java:java-tests_test_lib",
    "//plugins/groovy/groovy-uast-tests:uast-tests",
    "//plugins/groovy/groovy-uast-tests:uast-tests_test_lib",
    "//platform/remote-servers/target-integration-tests:remoteServers-targetsIntegrationTests",
    "//platform/remote-servers/target-integration-tests:remoteServers-targetsIntegrationTests_test_lib",
    "//python:python-commonTests",
    "//python:python-commonTests_test_lib",
    "//python/python-sdk:sdk",
    "//python/python-sdk:sdk_test_lib",
    "//plugins/restructuredtext",
    "//plugins/restructuredtext:restructuredtext_test_lib",
    "//plugins/markdown/test:tests",
    "//plugins/markdown/test:tests_test_lib",
    "//jps/jps-builders:build-tests",
    "//jps/jps-builders:build-tests_test_lib",
    "//plugins/devkit/jps-plugin:jps-tests",
    "//plugins/devkit/jps-plugin:jps-tests_test_lib",
    "//plugins/groovy/jps-plugin:jps-tests",
    "//plugins/groovy/jps-plugin:jps-tests_test_lib",
    "//plugins/ant/jps-plugin:jps-tests",
    "//plugins/ant/jps-plugin:jps-tests_test_lib",
    "//platform/testFramework/junit5",
    "//platform/testFramework/junit5:junit5_test_lib",
    "//plugins/devkit/intellij.devkit.workspaceModel/tests",
    "//plugins/devkit/intellij.devkit.workspaceModel/tests:tests_test_lib",
    "//plugins/performanceTesting/scripts-ui:ui",
    "//plugins/performanceTesting/scripts-ui:ui_test_lib",
    "//uast/uast-tests:tests",
    "//uast/uast-tests:tests_test_lib",
    "//platform/runtime/repository/tests",
    "//platform/runtime/repository/tests:tests_test_lib",
    "//platform/runtime/product/tests",
    "//platform/runtime/product/tests:tests_test_lib",
    "//tools/devLauncher/tests",
    "//tools/devLauncher/tests:tests_test_lib",
    "//plugins/htmltools:html-tools-tests",
    "//plugins/htmltools:html-tools-tests_test_lib",
    "//plugins/lombok",
    "//plugins/lombok:lombok_test_lib",
    "//xml/xmlbeans",
    "//xml/xmlbeans:xmlbeans_test_lib",
    "//plugins/jsonpath",
    "//plugins/jsonpath:jsonpath_test_lib",
    "//plugins/ui-designer/jps-plugin/tests",
    "//plugins/ui-designer/jps-plugin/tests:tests_test_lib",
    "//platform/non-modal-welcome-screen",
    "//platform/non-modal-welcome-screen:non-modal-welcome-screen_test_lib",
    "//platform/util/coroutines:coroutines-tests",
    "//platform/util/coroutines:coroutines-tests_test_lib",
    "//platform/util/progress:progress-tests",
    "//platform/util/progress:progress-tests_test_lib",
    "//platform/testFramework/junit5.jimfs",
    "//platform/testFramework/junit5.jimfs:junit5.jimfs_test_lib",
    "//platform/whatsNew",
    "//platform/whatsNew:whatsNew_test_lib",
    "//platform/remoteDev-util",
    "//platform/remoteDev-util:remoteDev-util_test_lib",
    "//platform/inspect",
    "//platform/inspect:inspect_test_lib",
    "//wintools",
    "//wintools:wintools_test_lib",
    "//python/python-exec-service:community-execService",
    "//python/python-exec-service:community-execService_test_lib",
    "//python/python-pyproject:pyproject",
    "//python/python-pyproject:pyproject_test_lib",
    "//platform/indexing-tests",
    "//platform/indexing-tests:indexing-tests_test_lib",
    "//platform/testFramework/monorepo",
    "//platform/testFramework/monorepo:monorepo_test_lib",
    "//plugins/textmate/tests",
    "//plugins/textmate/tests:tests_test_lib",
    "//python/python-process-output/frontend",
    "//python/python-process-output/frontend:frontend_test_lib",
    "//tools/intellij.tools.ide.starter.junit5:ide-starter-junit5",
    "//tools/intellij.tools.ide.starter.junit5:ide-starter-junit5_test_lib",
    "//platform/build-scripts/product-dsl",
    "//platform/build-scripts/product-dsl:product-dsl_test_lib",
    "//plugins/terminal/tests",
    "//plugins/terminal/tests:tests_test_lib",
    "//plugins/git4idea/terminal",
    "//plugins/git4idea/terminal:terminal_test_lib",
    "//platform/instanceContainer:instanceContainer-tests",
    "//platform/instanceContainer:instanceContainer-tests_test_lib",
    "//plugins/agent-workbench/chat",
    "//plugins/agent-workbench/chat:chat_test_lib",
    "//plugins/agent-workbench/plugin",
    "//plugins/agent-workbench/plugin:plugin_test_lib",
    "//plugins/agent-workbench/sessions",
    "//plugins/agent-workbench/sessions:sessions_test_lib",
    "//platform/polySymbols:polySymbols-tests",
    "//platform/polySymbols:polySymbols-tests_test_lib",
    "//images:images-tests",
    "//images:images-tests_test_lib",
    "//RegExpSupport:regexp-tests",
    "//RegExpSupport:regexp-tests_test_lib",
    "//platform/xdebugger-impl:debugger-impl-tests",
    "//platform/xdebugger-impl:debugger-impl-tests_test_lib",
    "//python/python-venv:venv-tests",
    "//python/python-venv:venv-tests_test_lib",
    "//python/services/system-python:python-community-services-systemPython-tests",
    "//python/services/system-python:python-community-services-systemPython-tests_test_lib",
    "//python/python-pyproject:pyproject-tests",
    "//python/python-pyproject:pyproject-tests_test_lib",
    "//python/services/internal-impl:python-community-services-internal-impl-tests",
    "//python/services/internal-impl:python-community-services-internal-impl-tests_test_lib",
    "//python/python-test-env/common",
    "//python/python-test-env/common:common_test_lib",
    "//python/python-test-env/conda",
    "//python/python-test-env/conda:conda_test_lib",
    "//python/python-test-env/core",
    "//python/python-test-env/core:core_test_lib",
    "//python/python-test-env/junit4",
    "//python/python-test-env/junit4:junit4_test_lib",
    "//python/python-test-env/plain",
    "//python/python-test-env/plain:plain_test_lib",
    "//python/python-test-env/uv",
    "//python/python-test-env/uv:uv_test_lib",
    "//platform/completion/common:common-tests",
    "//platform/completion/common:common-tests_test_lib",
    "//platform/settings-local:settings-local-tests",
    "//platform/settings-local:settings-local-tests_test_lib",
    "//platform/vcs-impl/frontend:vcs-impl-frontend-tests",
    "//platform/vcs-impl/frontend:vcs-impl-frontend-tests_test_lib",
    "//platform/vcs-impl/shared:vcs-impl-shared-tests",
    "//platform/vcs-impl/shared:vcs-impl-shared-tests_test_lib",
    "//platform/vcs-impl:vcs-impl-tests",
    "//platform/vcs-impl:vcs-impl-tests_test_lib",
    "//platform/xdebugger-impl/frontend:debugger-impl-frontend-tests",
    "//platform/xdebugger-impl/frontend:debugger-impl-frontend-tests_test_lib",
    "//platform/xdebugger-impl/ui:debugger-impl-ui-tests",
    "//platform/xdebugger-impl/ui:debugger-impl-ui-tests_test_lib",
    "//xml/relaxng:relaxng-tests",
    "//xml/relaxng:relaxng-tests_test_lib",
  ]
)
### auto-generated section `build intellij.idea.community.main.tests` end