module(name = "community")

bazel_dep(name = "bazel_features", version = "1.32.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_kotlin", version = "2.1.3")
bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_jvm", version = "0.0.1")
bazel_dep(name = "lib")
local_path_override(
    module_name = "lib",
    path = "lib",
)

local_path_override(
    module_name = "rules_jvm",
    path = "build/jvm-rules",
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.1")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain/...",
    "@zig_sdk//libc_aware/toolchain/...",
)

bazel_dep(name = "rules_python", version = "1.6.3")

kotlin_test_deps = use_repo_rule("//plugins/kotlin:kotlin_test_dependencies.bzl", "kotlin_test_deps")
kotlin_test_deps(name = "kotlin_test_deps")

http_file(
  name = "debugger_test_deps_debugger_agent",
  url = "https://cache-redirector.jetbrains.com/packages.jetbrains.team/maven/p/ij/intellij-dependencies/org/jetbrains/intellij/deps/debugger-agent/1.79/debugger-agent-1.79.jar",
  sha256 = "ba7a0aa7bbb813acab3b0edf36c0a15449f41896993c97e0d133fa4ea0a3e6d9",
  downloaded_file_path = "debugger-agent.jar"
)

# GraalVM
# git_override(
#     module_name = "rules_graalvm",
#     remote = "https://github.com/develar/rules_graalvm",
#     commit = "9d12232f7798df7087952314600f1ee0f4e4f9f7",
# )

jbr_toolchains = use_extension("@community//build:jbr-toolchains.bzl", "jbr_toolchains")

REMOTE_JBR21_REPOS = ["remotejbr21_" + platform for platform in [
    "linux",
    "linux_aarch64",
    "macos",
    "macos_aarch64",
    "win",
    "win_arm64",
]]

[use_repo(
    jbr_toolchains,
    repo + "_toolchain_config_repo",
) for repo in REMOTE_JBR21_REPOS]

[register_toolchains("@" + repo + "_toolchain_config_repo//:all") for repo in REMOTE_JBR21_REPOS]

# Use custom remote_java_tools_windows with vc_redist .dll files due to https://github.com/bazelbuild/rules_java/issues/316
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "remote_java_tools_windows_with_vc_redist",
    sha256 = "9ec4e41ebbb2b7259eb14f1ad708e8ee60087f33515bdec4876c675205e6950f",
    url = "https://packages.jetbrains.team/files/p/ij/intellij-build-dependencies/rules-java/java_tools_windows-v13.18-with-vc_redist.zip",
)
override_repo(
    use_extension("@rules_java//java:extensions.bzl", "toolchains"),
    remote_java_tools_windows = "remote_java_tools_windows_with_vc_redist",
)
