http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "debugger_test_deps_debugger_agent",
    downloaded_file_path = "debugger-agent.jar",
    sha256 = "6adec1500711ba2e78d2a0398b2e5e948877d129fb3248a0e58bdb4cc07f1370",
    url = "https://cache-redirector.jetbrains.com/packages.jetbrains.team/maven/p/ij/intellij-dependencies/org/jetbrains/intellij/deps/debugger-agent/1.178/debugger-agent-1.178.jar",
)
