load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
  visibility = ["//visibility:public"],
  name = "intellij.java.rt",
  srcs = glob(['resources/**/*.kt', 'resources/**/*.java','src/**/*.kt', 'src/**/*.java']),
  javac_opts = "//:j8",
  kotlinc_opts = "//:k8",
  plugins = ["@libraries//:serialization_plugin"],
  deps = [
    "@libraries//:ant.provided",
    "@libraries//:junit"
  ]
)
