load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
  name = "intellij.java.rt",
  visibility = ["//visibility:public"],
  srcs = glob(["resources/**/*.kt", "resources/**/*.java", "src/**/*.kt", "src/**/*.java"]),
  javac_opts = "//:j8",
  kotlinc_opts = "//:k8",
  deps = [
    "@libraries//:ant.provided",
    "@libraries//:junit"
  ]
)
