load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
  visibility = ["//visibility:public"],
  name = "intellij.platform.jps.model",
  srcs = glob(['src/**/*.kt', 'src/**/*.java']),
  javac_opts = "//:j11",
  kotlinc_opts = "//:k11",
  plugins = ["@libraries//:serialization_plugin"],
  deps = [
    "@community//platform/util:intellij.platform.util",
    "@libraries//:annotations"
  ]
)
