load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
  visibility = ["//visibility:public"],
  name = "intellij.tools.jps.build.standalone",
  srcs = glob(['src/**/*.kt', 'src/**/*.java']),
  javac_opts = "//:j11",
  kotlinc_opts = "//:k11",
  plugins = ["@libraries//:serialization_plugin"],
  deps = [
    "@libraries//:groovy",
    "@community//jps/jps-builders:intellij.platform.jps.build",
    "@community//jps/model-api:intellij.platform.jps.model",
    "@libraries//:cli-parser",
    "@community//jps/model-serialization:intellij.platform.jps.model.serialization",
    "@libraries//:protobuf-java"
  ]
)
